Update stream collection in HotelPersistenceAdapter
* Replaced `Stream.toList()` with `.collect(toList())` in the `findAll` and `findByCity` methods.
* Added static import for `java.util.stream.Collectors.toList`.